# journey_os

./: .gitignore  Cargo.toml  boot.s  build.sh  grub.cfg  linker.ld  qemu.sh  runner.sh  rustos.iso
.cargo/: config.toml
isodir/boot/grub/: grub.cfg
kernel/: Cargo.toml
kernel/src/: boot.s  main.rs  os_test.rs
kernel/src/interrupt/: handlers.rs  idt.rs  mod.rs  pic.rs
kernel/src/io/: mod.rs  output.rs  port.rs  serial.rs  stdout.rs  vga.rs
kernel/src/mem/: address.rs  allocator.rs  frames.rs  mod.rs
kernel/src/mem/paging/: entry.rs  mapper.rs  mod.rs  table.rs
kernel/src/util/: locked.rs  mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: boot.s  main.rs  multiboot.rs  vga.rs
src/mem/: frames.rs  mod.rs
