[package]
name = "rust-os"
version = "0.1.0"
authors = ["Pascal Mouret <pascal.mouret@me.com>"]
edition = "2018"

[lib]
name = "rustos_static"
crate-type = ["staticlib"]
path = "src/main.rs"

[profile.dev]
debug = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
